# wasm-shared

./: Cargo.toml  README.md  index.html  main.js  serve.json  worker.js
.cargo/: config.toml
src/: lib.rs
