[package]
name = "wasm-shared"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = ["console"] }
console_error_panic_hook = "0.1.7"
once_cell = "1.19.0"
parking_lot = "0.12.3"

[profile.release]
lto = true
opt-level = 's'
